# mcmngr

./: .gitignore  Cargo.toml  README.md  package.json  tauri.conf.json  turbo.json
.github/workflows/: check-dev.yml  check-release.yml  lint-gui.yml
gui/: bun.lockb  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
gui/app/: globals.css  layout.tsx  page.tsx
gui/app/home/: layout.tsx  page.tsx
gui/app/home/subpage_second/: layout.tsx  page.tsx
gui/components/: header.tsx  navbar.tsx  no_layout.tsx  profile.tsx  route_path.tsx  status_bar.tsx  svg.tsx
gui/utils/: null.ts
src/: lib.rs  main.rs
src/commands/: hello.rs  info.rs  mod.rs  start.rs
src/gui/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/gui/app/: globals.css  layout.tsx  page.tsx
src/gui/app/home/: page.tsx
src/gui/app/home/test/: page.tsx
src/gui/components/: greet.tsx  route_path.tsx  status_bar.tsx  svg.tsx
src/util/: logging.rs
