# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "mcmngr"
version = "0.0.0"
description = "The ultimate remote minecraft server management tool."
authors = ["Arthur Bufalo <arthurbr@cdmd.dev>"]
license = "AGPL-3.0"
homepage = "github.com/ar7huz1nh0/mcmngr"
default-run = "mcmngr"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [] }
clap = "4.3.19"
chrono = "0.4.26"
simplelog = { version = "0.12.1", features = ["paris"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
